Abstracted layout components

--- a/LauraAndChad/dev/app.scss
+++ b/LauraAndChad/dev/app.scss
@@ -1,3 +1,11 @@
 ﻿@import "_normalize";
 @import "_settings";
 @import "../bower_components/foundation-sites/scss/foundation";
+@import "nav";
+@import "home";
+@import "our-story";
+@import "the-wedding";
+@import "getting-there";
+@import "registry";
+@import "footer";
+
