Starting layout and styles

--- a/LauraAndChad/Views/Home/Index.cshtml
+++ b/LauraAndChad/Views/Home/Index.cshtml
@@ -4,4 +4,5 @@
 @Html.Partial("_TheWedding")
 @Html.Partial("_GettingThere")
 @Html.Partial("_Registry")
+@Html.Partial("_Rsvp")
 @Html.Partial("_Footer")
