--- a/LauraAndChad/Views/Home/_Home.cshtml
+++ b/LauraAndChad/Views/Home/_Home.cshtml
@@ -1,1 +1,17 @@
-﻿<section class="home"></section>
+﻿<section id="home" data-parallax="scroll" data-image-src="/content/images/marble.jpg">
+  <div class="row">
+    <div class="large-12 columns">
+      <div class="home-border">
+        <div class="home-card">
+          <p>Together with their families</p>
+          <h1>LAURA + CHAD</h1>
+          <p>Joyfully invite you to their wedding celebration</p>
+          <p class="home-date">June 24, 2017</p>
+          <p class="home-join-us">Please join us at</p>
+          <p class="home-trigger">TRIGGER CHICAGO</p>
+          <a class="button">RSVP</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
