--- a/LauraAndChad/Views/Home/_Nav.cshtml
+++ b/LauraAndChad/Views/Home/_Nav.cshtml
@@ -1,3 +1,17 @@
-﻿<nav>
-  
+﻿<nav class="nav">
+  <div class="title-bar" data-responsive-toggle="menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle></button>
+    <div class="title-bar-title">Menu</div>
+  </div>
+  <div class="top-bar" id="menu">
+    <div class="menu-centered">
+      <ul class="menu" data-dropdown-menu>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#our-story">OUR STORY</a></li>
+        <li><a href="#the-wedding">THE WEDDING</a></li>
+        <li><a href="#getting-there">GETTING THERE</a></li>
+        <li><a href="#registry">REGISTRY</a></li>
+      </ul>
+    </div>
+  </div>
 </nav>
