--- a/LauraAndChad/Views/Home/_TheWedding.cshtml
+++ b/LauraAndChad/Views/Home/_TheWedding.cshtml
@@ -1,1 +1,20 @@
-﻿<section class="the-wedding"></section>
+﻿<section id="the-wedding" data-parallax="scroll" data-image-src="/content/images/marble.jpg">
+  <section class="the-wedding-content">
+    <h4 class="section-header">The Wedding</h4>
+    <div class="row">
+      <div class="large-6 columns">
+        <h2>WHEN</h2>
+        <p>Sunday, Sep 23, 2023</p>
+        <p>Wedding Ceremony: 12:00 am</p>
+        <p>Reception: 13:00 pm</p>
+      </div>
+      <div class="large-6 columns">
+        <h2>WHERE</h2>
+        <p>Trigger </p>
+        <p>2810 W Addison St, Chicago, IL 60618</p>
+        <a>View Map</a>
+      </div>
+    </div>
+    <a class="button">RSVP</a>
+  </section>
+</section>
