--- a/LauraAndChad/Views/Home/_OurStory.cshtml
+++ b/LauraAndChad/Views/Home/_OurStory.cshtml
@@ -1,1 +1,9 @@
-﻿<section class="our-story"></section>
+﻿<section id="our-story">
+  <div class="row">
+    <div class="large-8 large-push-2 columns">
+      <h4 class="section-header">Our Story</h4>
+      <p>Beard YOLO pinterest snackwave art party hot chicken</p>
+      <p>Mlkshk mustache vegan, iceland craft beer typewriter echo park tote bag godard. Prism butcher hammock fashion axe. Woke yr everyday carry 90's, four loko dreamcatcher kinfolk disrupt listicle forage subway tile roof party. Brooklyn vegan lumbersexual, meh hell of la croix poke.</p>
+    </div>
+  </div>
+ </section>
