--- a/LauraAndChad/Views/Shared/_Layout.cshtml
+++ b/LauraAndChad/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
   <meta name="description" content="Laura & Chad's Wedding">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="~/Content/app.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Great+Vibes|Cormorant+Garamond:500i" rel="stylesheet">
   <script src="~/Content/app.js"></script>
 </head>
 <body>
