--- a/LauraAndChad/dev/_getting-there.scss
+++ b/LauraAndChad/dev/_getting-there.scss
@@ -1,1 +1,16 @@
-﻿
+﻿@import "_settings";
+
+#getting-there {
+    padding: 8rem 0;
+    text-align: center;
+    background-color: rgba(93,76,89,0.5);
+    color: $white;
+    @extend .font-primary;
+
+    h2 {
+        font-family: 'Great Vibes', cursive;
+        font-size: 6rem;
+        margin: 0 0 2rem;
+        letter-spacing: 2px;
+    }
+}
