--- a/LauraAndChad/dev/_our-story.scss
+++ b/LauraAndChad/dev/_our-story.scss
@@ -1,1 +1,9 @@
-﻿
+﻿@import "_settings";
+
+#our-story {
+    padding: 8rem 0;
+    text-align: center;
+    background-color: rgba(93,76,89,0.5);
+    color: $white;
+    @extend .font-primary;
+}
