--- a/LauraAndChad/dev/_registry.scss
+++ b/LauraAndChad/dev/_registry.scss
@@ -1,1 +1,12 @@
-﻿
+﻿.registry-content {
+    @extend .font-primary;
+    padding: 8rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.75);
+    height: 100%;
+    width: 100%;
+
+    .button {
+        margin: 4rem 0 0;
+    }
+}
