Fleshed out design more

--- a/LauraAndChad/Views/Home/_GettingThere.cshtml
+++ b/LauraAndChad/Views/Home/_GettingThere.cshtml
@@ -1,14 +1,19 @@
 ﻿<section id="getting-there">
-  <div class="row">
-    <div class="large-8 large-push-2 columns">
-      <h4 class="section-header">Getting There</h4>
-      <h2>Transportation</h2>
-      <p>Kogi literally pabst woke quinoa, plaid actually williamsburg normcore tumblr before they sold out heirloom hella wolf. Affogato kale chips prism bicycle rights kogi hammock helvetica photo booth ethical. YOLO chambray hella taxidermy, fam biodiesel brooklyn wayfarers pork belly fingerstache. </p>
-      <br/>
-      <br/>
-      <br/>
-      <h2>Accomidation</h2>
-      <p>Fam ennui thundercats authentic, irony lo-fi jianbing air plant fixie occupy viral. Small batch celiac fashion axe unicorn, jean shorts deep v truffaut art party paleo chia tousled sustainable prism. Kombucha chillwave hella, locavore PBR&B tousled celiac copper mug master cleanse tattooed fingerstache twee austin.</p>
+  <video preload="auto" autoplay loop id="getting-there-video">
+    <source src="content/images/video.mp4">
+  </video>
+  <div class="getting-there-content">
+    <div class="row">
+      <div class="large-8 large-push-2 columns">
+        <h4 class="section-header">Getting There</h4>
+        <h2>Transportation</h2>
+        <p>Kogi literally pabst woke quinoa, plaid actually williamsburg normcore tumblr before they sold out heirloom hella wolf. Affogato kale chips prism bicycle rights kogi hammock helvetica photo booth ethical. YOLO chambray hella taxidermy, fam biodiesel brooklyn wayfarers pork belly fingerstache. </p>
+        <br />
+        <br />
+        <br />
+        <h2>Accomidation</h2>
+        <p>Fam ennui thundercats authentic, irony lo-fi jianbing air plant fixie occupy viral. Small batch celiac fashion axe unicorn, jean shorts deep v truffaut art party paleo chia tousled sustainable prism. Kombucha chillwave hella, locavore PBR&B tousled celiac copper mug master cleanse tattooed fingerstache twee austin.</p>
+      </div>
     </div>
   </div>
 </section>
