--- a/LauraAndChad/Views/Home/_Home.cshtml
+++ b/LauraAndChad/Views/Home/_Home.cshtml
@@ -9,7 +9,7 @@
           <p class="home-date">June 24, 2017</p>
           <p class="home-join-us">Please join us at</p>
           <p class="home-trigger">TRIGGER CHICAGO</p>
-          <a class="button">RSVP</a>
+          <a data-scroll href="#rsvp" class="button">RSVP</a>
         </div>
       </div>
     </div>
