--- a/LauraAndChad/Views/Home/_Nav.cshtml
+++ b/LauraAndChad/Views/Home/_Nav.cshtml
@@ -1,16 +1,16 @@
 ﻿<nav class="nav">
   <div class="title-bar" data-responsive-toggle="menu" data-hide-for="medium">
-    <button class="menu-icon" type="button" data-toggle></button>
-    <div class="title-bar-title">Menu</div>
+    <button class="menu-icon float-right" type="button" data-toggle></button>
   </div>
   <div class="top-bar" id="menu">
     <div class="menu-centered">
       <ul class="menu" data-dropdown-menu>
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#our-story">OUR STORY</a></li>
-        <li><a href="#the-wedding">THE WEDDING</a></li>
-        <li><a href="#getting-there">GETTING THERE</a></li>
-        <li><a href="#registry">REGISTRY</a></li>
+        <li><a data-scroll href="#home">HOME</a></li>
+        <li><a data-scroll href="#our-story">OUR STORY</a></li>
+        <li><a data-scroll href="#the-wedding">THE WEDDING</a></li>
+        <li><a data-scroll href="#getting-there">GETTING THERE</a></li>
+        <li><a data-scroll href="#registry">REGISTRY</a></li>
+        <li><a data-scroll href="#rsvp">RSVP</a></li>
       </ul>
     </div>
   </div>
