--- a/LauraAndChad/Views/Home/_OurStory.cshtml
+++ b/LauraAndChad/Views/Home/_OurStory.cshtml
@@ -1,9 +1,14 @@
 ﻿<section id="our-story">
-  <div class="row">
-    <div class="large-8 large-push-2 columns">
-      <h4 class="section-header">Our Story</h4>
-      <p>Beard YOLO pinterest snackwave art party hot chicken</p>
-      <p>Mlkshk mustache vegan, iceland craft beer typewriter echo park tote bag godard. Prism butcher hammock fashion axe. Woke yr everyday carry 90's, four loko dreamcatcher kinfolk disrupt listicle forage subway tile roof party. Brooklyn vegan lumbersexual, meh hell of la croix poke.</p>
+  <video preload="auto" playsinline autoplay muted loop id="our-story-video">
+    <source src="content/images/video.mp4">
+  </video>
+  <div class="our-story-content">
+    <div class="row">
+      <div class="large-8 large-push-2 columns">
+        <h4 class="section-header">Our Story</h4>
+        <p>Beard YOLO pinterest snackwave art party hot chicken</p>
+        <p>Mlkshk mustache vegan, iceland craft beer typewriter echo park tote bag godard. Prism butcher hammock fashion axe. Woke yr everyday carry 90's, four loko dreamcatcher kinfolk disrupt listicle forage subway tile roof party. Brooklyn vegan lumbersexual, meh hell of la croix poke.</p>
+      </div>
     </div>
   </div>
- </section>
+</section>
