--- a/LauraAndChad/dev/_getting-there.scss
+++ b/LauraAndChad/dev/_getting-there.scss
@@ -1,16 +1,43 @@
 ﻿@import "_settings";
 
 #getting-there {
-    padding: 8rem 0;
-    text-align: center;
-    background-color: rgba(93,76,89,0.5);
-    color: $white;
-    @extend .font-primary;
+    position: relative;
+    overflow: hidden;
+    height: 1127px;
 
-    h2 {
-        font-family: 'Great Vibes', cursive;
-        font-size: 6rem;
-        margin: 0 0 2rem;
-        letter-spacing: 2px;
+    .getting-there-content {
+        width: 100%;
+        padding: 8rem 0;
+        text-align: center;
+        color: $white;
+        @extend .font-primary;
+        background-color: rgba(93,76,89,0.75);
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        h2 {
+            font-family: 'Great Vibes', cursive;
+            font-size: 3rem;
+            margin: 0 0 2rem;
+            letter-spacing: 2px;
+        }
+    }
+
+    #getting-there-video {
+        width: 100%;
+        display: block;
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    @include breakpoint(medium up) {
+         height: 1001px;
+
+        .getting-there-content {
+            h2 {
+                font-size: 6rem;
+            }
+        }
     }
 }
