--- a/LauraAndChad/dev/_nav.scss
+++ b/LauraAndChad/dev/_nav.scss
@@ -16,15 +16,38 @@ nav {
         background: rgba(255, 255, 255, 0.9);
     }
 
+    .title-bar {
+        background: rgba(255, 255, 255, 0.9);
+        color: $body-font-color;
+    }
+
+    .title-bar button {
+        margin: 10px 16px;
+    }
+
     a {
         @extend .font-secondary;
         color: $dark-gray;
         font-size: 14px;
         text-decoration: none;
-        ;
 
         &:hover {
             color: $body-font-color;
         }
+    }
+
+}
+
+.no-js .top-bar {
+    display: none;
+}
+
+@media screen and (min-width: 40em) {
+    .no-js .top-bar {
+        display: block;
+    }
+
+    .no-js .title-bar {
+        display: none;
     }
 }
