--- a/LauraAndChad/dev/_registry.scss
+++ b/LauraAndChad/dev/_registry.scss
@@ -1,6 +1,6 @@
 ﻿.registry-content {
     @extend .font-primary;
-    padding: 8rem;
+    padding: 8rem 0 ;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.75);
     height: 100%;
