--- a/LauraAndChad/Views/Home/_Rsvp.cshtml
+++ b/LauraAndChad/Views/Home/_Rsvp.cshtml
@@ -1,43 +1,43 @@
-﻿<section id="rsvp">
+﻿@model LauraAndChad.Models.Rsvp
+
+<section id="rsvp">
   <div class="row">
     <div class="large-8 large-push-2 columns">
       <h4 class="section-header">RSVP</h4>
-      <div class="row">
-        <div class="large-6 columns">
-          <label>
-            * First Name
-            <input type="text">
-          </label>
-        </div>
-        <div class="large-6 columns">
-          <label>
-            * Last Name
-            <input type="text">
-          </label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-6 columns">
-          <label>
-            Guest First Name
-            <input type="text">
-          </label>
-        </div>
-        <div class="large-6 columns">
-          <label>
-            Guest Last Name
-            <input type="text">
-          </label>
-        </div>
-      </div>
-      <label>
-        * Email
-        <input type="text">
-      </label>
-      <label>
-        Comments?
-        <textarea></textarea>
-      </label>
+      @using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post))
+      {
+          @Html.AntiForgeryToken()
+          <div class="row">
+            <div class="large-6 columns">
+              @Html.LabelFor(m => m.FirstName)
+              @Html.TextBoxFor(m => m.FirstName)
+              @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+            </div>
+            <div class="large-6 columns">
+              @Html.LabelFor(m => m.LastName)
+              @Html.TextBoxFor(m => m.LastName)
+              @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-6 columns">
+              @Html.LabelFor(m => m.GuestFirstName)
+              @Html.TextBoxFor(m => m.GuestFirstName)
+              @Html.ValidationMessageFor(m => m.GuestFirstName, "", new { @class = "text-danger" })
+            </div>
+            <div class="large-6 columns">
+              @Html.LabelFor(m => m.GuestLastName)
+              @Html.TextBoxFor(m => m.GuestLastName)
+              @Html.ValidationMessageFor(m => m.GuestLastName, "", new { @class = "text-danger" })
+            </div>
+          </div>
+          @Html.LabelFor(m => m.Email)
+          @Html.TextBoxFor(m => m.Email)
+          @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+          @Html.LabelFor(m => m.Comments)
+          @Html.TextAreaFor(m => m.Comments)
+          @Html.ValidationMessageFor(m => m.Comments, "", new { @class = "text-danger" })
+      }
     </div>
   </div>
 </section>
