--- a/LauraAndChad/Views/Shared/_Layout.cshtml
+++ b/LauraAndChad/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
   <script src="~/Content/app.js"></script>
 </head>
 <body>
-  <input type="hidden" class="no-js top-bar" />
+  <input type="hidden" class="no-js top-bar form-error is-visable" />
   @RenderBody()
   <script>
     smoothScroll.init();
