Added means of auto scroll on failed model.state

--- a/LauraAndChad/Views/Home/_OurStory.cshtml
+++ b/LauraAndChad/Views/Home/_OurStory.cshtml
@@ -1,6 +1,6 @@
 ﻿<section id="our-story">
   <video preload="auto" playsinline autoplay muted loop id="our-story-video">
-    <source src="content/images/video.mp4">
+    <source src="/content/images/video.mp4">
   </video>
   <div class="our-story-content">
     <div class="row">
