--- a/LauraAndChad/Views/Home/_GettingThere.cshtml
+++ b/LauraAndChad/Views/Home/_GettingThere.cshtml
@@ -1,6 +1,6 @@
 ﻿<section id="getting-there">
   <video preload="auto" autoplay loop id="getting-there-video">
-    <source src="content/images/video.mp4">
+    <source src="/content/images/video.mp4">
   </video>
   <div class="getting-there-content">
     <div class="row">
