--- a/LauraAndChad/Views/Home/_Rsvp.cshtml
+++ b/LauraAndChad/Views/Home/_Rsvp.cshtml
@@ -8,21 +8,22 @@
       {
         <h5>@TempData["RsvpMessage"].ToString()</h5>
       }
-      @using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { data_abide = "", novalidate = "", }))
+      @using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { data_abide = "", novalidate = "" }))
       {
+          @Html.ValidationSummary()
           @Html.AntiForgeryToken()
           <div class="row">
             <div class="large-6 columns">
               @Html.LabelFor(m => m.FirstName)
               @Html.TextBoxFor(m => m.FirstName, new { required = "" })
               @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "form-error" })
-              <span class="form-error">First Name Required</span>
+              @*<span class="form-error">First Name Required</span>*@
             </div>
             <div class="large-6 columns">
               @Html.LabelFor(m => m.LastName)
               @Html.TextBoxFor(m => m.LastName, new { required = "" })
               @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "form-error" })
-              <span class="form-error">Last Name Required</span>
+              @*<span class="form-error">Last Name Required</span>*@
             </div>
           </div>
           <div class="row">
@@ -41,8 +42,7 @@
             <div class="large-12 columns">
               @Html.LabelFor(m => m.Email)
               @Html.TextBoxFor(m => m.Email, new { required = "" })
-              @Html.ValidationMessageFor(m => m.Email, "", new { @class = "form-error" })
-              <span class="form-error">Email Required</span>
+              @Html.ValidationMessageFor(m => m.Email, "", new { @class = "form-error", pattern = "email" })
             </div>
           </div>
           @Html.LabelFor(m => m.Comments)
