--- a/LauraAndChad/Views/Shared/_Layout.cshtml
+++ b/LauraAndChad/Views/Shared/_Layout.cshtml
@@ -12,6 +12,11 @@
 </head>
 <body>
   <input type="hidden" class="no-js top-bar form-error is-visible" />
+  <div class="validation-summary-errors" style="display: none;">
+    <ul>
+      <li></li>
+    </ul>
+  </div>
   @RenderBody()
   <script>
     smoothScroll.init();
