--- a/LauraAndChad/dev/app.scss
+++ b/LauraAndChad/dev/app.scss
@@ -42,3 +42,15 @@ a.button {
     letter-spacing: 0.5rem;
 }
 
+.validation-summary-errors {
+    ul {
+        list-style: none;
+        margin: 0 0 4rem;
+
+        li {
+            font-weight: 700;
+            font-size: 16px;
+            color: $alert-color;
+        }
+    }
+}
