--- a/LauraAndChad/Views/Home/_Rsvp.cshtml
+++ b/LauraAndChad/Views/Home/_Rsvp.cshtml
@@ -1,16 +1,16 @@
 ﻿@model global::LauraAndChad.Models.Rsvp
-
 <section id="rsvp">
   <div class="row">
     <div class="large-8 large-push-2 columns">
       <h4 class="section-header">RSVP</h4>
-      @if (TempData["RsvpMessage"] != null)
-      {
-        <h5>@TempData["RsvpMessage"].ToString()</h5>
-      }
       @using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { data_abide = "", novalidate = "" }))
       {
           @Html.ValidationSummary()
+          <h5 style="display:none"></h5>
+        if (ViewBag.Success != null)
+        {
+              <h5>@ViewBag.Success</h5>
+        }
           @Html.AntiForgeryToken()
           <div class="row">
             <div class="large-6 columns">
@@ -42,7 +42,7 @@
             <div class="large-12 columns">
               @Html.LabelFor(m => m.Email)
               @Html.TextBoxFor(m => m.Email, new { required = "", pattern = "email" })
-              @Html.ValidationMessageFor(m => m.Email, "", new { @class = "form-error"})
+              @Html.ValidationMessageFor(m => m.Email, "", new { @class = "form-error" })
               <span class="form-error">Email field is not a valid e-mail address</span>
             </div>
           </div>
