--- a/LauraAndChad/dev/_rsvp.scss
+++ b/LauraAndChad/dev/_rsvp.scss
@@ -36,6 +36,26 @@
         text-align: left;
     }
 
+    .validation-summary-errors {
+        ul {
+            list-style: none;
+            margin: 0 0 4rem;
+
+            li {
+                font-weight: 700;
+                font-size: 16px;
+                color: $alert-color;
+            }
+        }
+    }
+
+    h5 {
+        margin: 0 0 4rem;
+        color: $success-color;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
     @include breakpoint(medium up) {
         padding: 8rem 0 6rem;
     }
