Styled mobile navigation

--- a/LauraAndChad/Views/Home/_Nav.cshtml
+++ b/LauraAndChad/Views/Home/_Nav.cshtml
@@ -1,6 +1,6 @@
 ﻿<nav class="nav">
   <div class="title-bar" data-responsive-toggle="menu" data-hide-for="medium">
-    <button class="menu-icon float-right" type="button" data-toggle></button>
+    <i class="fa fa-bars" data-toggle></i>
   </div>
   <div class="top-bar" id="menu">
     <div class="menu-centered">
