--- a/LauraAndChad/Views/Home/_GettingThere.cshtml
+++ b/LauraAndChad/Views/Home/_GettingThere.cshtml
@@ -5,14 +5,21 @@
   <div class="getting-there-content">
     <div class="row">
       <div class="large-8 large-push-2 columns">
-        <h4 class="section-header">Getting There</h4>
-        <h2>Transportation</h2>
-        <p>Kogi literally pabst woke quinoa, plaid actually williamsburg normcore tumblr before they sold out heirloom hella wolf. Affogato kale chips prism bicycle rights kogi hammock helvetica photo booth ethical. YOLO chambray hella taxidermy, fam biodiesel brooklyn wayfarers pork belly fingerstache. </p>
+        <h4 class="section-header">Accommodations</h4>
+        <a href="http://freehandhotels.com/chicago/" title="Freehand Chicago" target="_blank">Freehand Chicago</a>
+        <p>
+          19 East Ohio Street, Chicago IL 60611<br />
+          866.925.4159
+        </p>
         <br />
         <br />
+        <p>Other</p>
+        <p>Chicago is a big city with lots of different options for accommodations. If you're looking for something a little different or more budget-friendly, you might consider checking the following resources:</p>
+        <a href="http://airbnb.com" title="AirBnB" target="_blank">AirBnB</a>
         <br />
-        <h2>Accomidation</h2>
-        <p>Fam ennui thundercats authentic, irony lo-fi jianbing air plant fixie occupy viral. Small batch celiac fashion axe unicorn, jean shorts deep v truffaut art party paleo chia tousled sustainable prism. Kombucha chillwave hella, locavore PBR&B tousled celiac copper mug master cleanse tattooed fingerstache twee austin.</p>
+        <a href="http://hotels.com" title="Hotels.com" target="_blank">Hotels.com</a>
+        <br />
+        <a href="http://expedia" title="Expedia" target="_blank">Expedia</a>
       </div>
     </div>
   </div>
