--- a/LauraAndChad/Views/Home/_Registry.cshtml
+++ b/LauraAndChad/Views/Home/_Registry.cshtml
@@ -3,7 +3,7 @@
     <h4 class="section-header">Registry</h4>
     <div class="row">
       <div class="large-8 large-push-2 columns">
-        <p>Chambray tilde nostrud, jianbing viral etsy dolor laboris tacos gastropub iPhone shoreditch before they sold out. 8-bit flannel swag live-edge poke brooklyn retro.</p>
+        <p>Coming Soon.</p>
       </div>
     </div>
     <a class="button">REGISTRY</a>
