--- a/LauraAndChad/Views/Home/_TheWedding.cshtml
+++ b/LauraAndChad/Views/Home/_TheWedding.cshtml
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="large-6 columns">
         <h2>WHEN</h2>
-        <p>Sunday, Sep 23, 2023</p>
-        <p>Wedding Ceremony: 12:00 am</p>
-        <p>Reception: 13:00 pm</p>
+        <p>Saturday, June 24th 2017</p>
+        <p>Wedding Ceremony: 5:00pm</p>
+        <p>Reception: 6:00pm</p>
       </div>
       <div class="large-6 columns">
         <h2>WHERE</h2>
