--- a/LauraAndChad/Views/Home/Index.cshtml
+++ b/LauraAndChad/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@Html.Partial("_Nav")
 @Html.Partial("_Home")
-@Html.Partial("_OurStory")
+@*@Html.Partial("_OurStory")*@
 @Html.Partial("_TheWedding")
 @Html.Partial("_GettingThere")
 @Html.Partial("_Registry")
