--- a/LauraAndChad/Views/Home/_Registry.cshtml
+++ b/LauraAndChad/Views/Home/_Registry.cshtml
@@ -6,6 +6,6 @@
         <p>Coming Soon.</p>
       </div>
     </div>
-    <a class="button">REGISTRY</a>
+    @*<a class="button">REGISTRY</a>*@
   </section>
 </section>
