--- a/LauraAndChad/Views/Home/_Nav.cshtml
+++ b/LauraAndChad/Views/Home/_Nav.cshtml
@@ -6,9 +6,9 @@
     <div class="menu-centered">
       <ul class="menu" data-dropdown-menu>
         <li><a data-scroll href="#home">HOME</a></li>
-        <li><a data-scroll href="#our-story">OUR STORY</a></li>
+        @*<li><a data-scroll href="#our-story">OUR STORY</a></li>*@
         <li><a data-scroll href="#the-wedding">THE WEDDING</a></li>
-        <li><a data-scroll href="#getting-there">GETTING THERE</a></li>
+        <li><a data-scroll href="#getting-there">ACCOMIDATIONS</a></li>
         <li><a data-scroll href="#registry">REGISTRY</a></li>
         <li><a data-scroll href="#rsvp">RSVP</a></li>
       </ul>
