--- a/LauraAndChad/Views/Home/_Rsvp.cshtml
+++ b/LauraAndChad/Views/Home/_Rsvp.cshtml
@@ -3,7 +3,9 @@
   <div class="row">
     <div class="large-8 large-push-2 columns">
       <h4 class="section-header">RSVP</h4>
-      @using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { data_abide = "", novalidate = "" }))
+      <p>Invitations are coming soon!</p>
+      <p>Be sure to check back to RSVP online.</p>
+      @*@using (Html.BeginForm("Rsvp", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { data_abide = "", novalidate = "" }))
       {
           @Html.ValidationSummary()
           <h5 style="display:none"></h5>
@@ -50,7 +52,7 @@
           @Html.TextAreaFor(m => m.Comments)
           @Html.ValidationMessageFor(m => m.Comments, "", new { @class = "form-error" })
           <input type="submit" value="SEND" class="button large" />
-      }
+      }*@
     </div>
   </div>
 </section>
