--- a/LauraAndChad/Views/Home/_TheWedding.cshtml
+++ b/LauraAndChad/Views/Home/_TheWedding.cshtml
@@ -15,6 +15,6 @@
         <a>View Map</a>
       </div>
     </div>
-    <a data-scroll href="#rsvp" class="button">RSVP</a>
+    @*<a data-scroll href="#rsvp" class="button">RSVP</a>*@
   </section>
 </section>
