--- a/LauraAndChad/Views/Home/_Registry.cshtml
+++ b/LauraAndChad/Views/Home/_Registry.cshtml
@@ -1,11 +1,11 @@
 ﻿<section id="registry" data-parallax="scroll" data-image-src="/content/images/marble.jpg">
   <section class="registry-content">
     <h4 class="section-header">Registry</h4>
-    <div class="row">
+    @*<div class="row">
       <div class="large-8 large-push-2 columns">
         <p>Coming Soon.</p>
       </div>
-    </div>
-    @*<a class="button">REGISTRY</a>*@
+    </div>*@
+    <a class="button" href="https://www.newlywish.com/registry/laura-rupp-and-chad-ramos-" target="_blank" title="Newlywish Registry">NEWLYWISH</a>
   </section>
 </section>
