--- a/LauraAndChad/Views/Home/_Registry.cshtml
+++ b/LauraAndChad/Views/Home/_Registry.cshtml
@@ -1,6 +1,9 @@
 ﻿<section id="registry" data-parallax="scroll" data-image-src="/content/images/marble.jpg">
   <section class="registry-content">
     <h4 class="section-header">Registry</h4>
-    <a class="button" href="https://www.newlywish.com/registry/laura-rupp-and-chad-ramos-" target="_blank" title="Newlywish Registry">NEWLYWISH</a>
+    <div class="button-group">
+      <a class="button" href="https://www.newlywish.com/registry/laura-rupp-and-chad-ramos-" target="_blank" title="Newlywish Registry" style="margin-right: 0.5rem;">NewlyWish</a>
+      <a class="button" href="https://www.honeyfund.com/wedding/RamosRuppWedding" target="_blank" title="Honeyfund Registry" style="margin-left: 0.5rem;">HonyFund</a>
+    </div>
   </section>
 </section>
